# pyinstantmeshes

./: CMakeLists.txt  README.md  coverage.xml  pyproject.toml  pyproject.toml.nanobind
.github/: TAG_v1.0.0.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  benchmark_bindings.py  comparison_results.json  generate_report.py  nanobind_results.json  pybind11_results.json  run_comparison.py
docs/: MIGRATION_SUMMARY.md
docs/benchmarks/: bindings_pybind11_vs_nanobind.md
src/: bindings.cpp  bindings_nanobind.cpp
tests/: test_remesh.py  test_remesh_file.py
