[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pyinstantmeshes"
version = "0.1.0"
description = "Python bindings for Instant Meshes - fast automatic retopology"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "pyinstantmeshes contributors"}
]
dependencies = [
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/greenbrettmichael/pyinstantmeshes"
Repository = "https://github.com/greenbrettmichael/pyinstantmeshes"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
